--- a/AVCapture/Base.lproj/Main.storyboard
+++ b/AVCapture/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G26a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -19,52 +19,51 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2d5-yC-G7B" customClass="CameraPreviewView" customModule="AVCapture" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view tag="1" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lWf-9m-por" userLabel="Button Pallette">
+                                        <rect key="frame" x="0.0" y="567" width="375" height="100"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MYd-Ru-Qt1" customClass="PrettyButton" customModule="AVCapture" customModuleProvider="target">
+                                                <rect key="frame" x="142" y="26" width="90" height="48"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="90" id="2KW-s5-BQ2"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                <inset key="contentEdgeInsets" minX="15" minY="15" maxX="15" maxY="15"/>
+                                                <state key="normal" title="Photo!">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="color">
+                                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="lineWidth">
+                                                        <real key="value" value="3"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="radius">
+                                                        <real key="value" value="5"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="cameraPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vsZ-BH-o3Y"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="NSf-0d-dXV"/>
+                                            <constraint firstItem="MYd-Ru-Qt1" firstAttribute="centerX" secondItem="lWf-9m-por" secondAttribute="centerX" id="aP2-p5-09b"/>
+                                            <constraint firstItem="MYd-Ru-Qt1" firstAttribute="centerY" secondItem="lWf-9m-por" secondAttribute="centerY" id="ixw-ox-TSx"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lWf-9m-por" userLabel="Button Pallette">
-                                <rect key="frame" x="0.0" y="567" width="375" height="100"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MYd-Ru-Qt1" customClass="PrettyButton" customModule="AVCapture" customModuleProvider="target">
-                                        <rect key="frame" x="142" y="26" width="90" height="48"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="90" id="2KW-s5-BQ2"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <inset key="contentEdgeInsets" minX="15" minY="15" maxX="15" maxY="15"/>
-                                        <state key="normal" title="Photo!">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="color">
-                                                <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="lineWidth">
-                                                <real key="value" value="3"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="radius">
-                                                <real key="value" value="5"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="cameraPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vsZ-BH-o3Y"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="NSf-0d-dXV"/>
-                                    <constraint firstItem="MYd-Ru-Qt1" firstAttribute="centerX" secondItem="lWf-9m-por" secondAttribute="centerX" id="aP2-p5-09b"/>
-                                    <constraint firstItem="MYd-Ru-Qt1" firstAttribute="centerY" secondItem="lWf-9m-por" secondAttribute="centerY" id="ixw-ox-TSx"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="lWf-9m-por" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7nm-Yn-5UM"/>
-                            <constraint firstAttribute="trailing" secondItem="lWf-9m-por" secondAttribute="trailing" id="Byx-hy-oHM"/>
                             <constraint firstItem="2d5-yC-G7B" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="IcJ-wC-oDY"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lWf-9m-por" secondAttribute="bottom" id="LAc-Ao-UWb"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2d5-yC-G7B" secondAttribute="bottom" id="TzV-l2-mi9"/>
                             <constraint firstAttribute="trailing" secondItem="2d5-yC-G7B" secondAttribute="trailing" id="drz-q1-BzR"/>
                             <constraint firstItem="2d5-yC-G7B" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="pSe-og-21T"/>
